# rpi-adhan

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml
docs/: plan-impl.md  plan-spec.md  smoke-checklist.md
scripts/: bt-keepalive.sh  bt-pair.sh  bt-watchdog.sh  install.sh
src/adhan/: __init__.py  __main__.py  app.py  cli.py  config.py  logging_setup.py  media.py  models.py  netutil.py  orchestrator.py  scheduler.py  state.py
src/adhan/players/: base.py  bluetooth.py  cast.py  manager.py  reliable.py
src/adhan/times/: adjuster.py  base.py  offline.py
systemd/: adhan-bt-keepalive.service  adhan-bt-watchdog.service  adhan.service
tests/: fakes.py  test_adjuster.py  test_app.py  test_bluetooth_player.py  test_cast_player.py  test_cli.py  test_config.py  test_logging.py  test_media.py  test_models.py  test_netutil.py  test_offline_provider.py  test_orchestrator.py  test_output_manager.py  test_players_base.py  test_reliable.py  test_scheduler.py  test_smoke.py  test_state.py  test_times_base.py
