[project]
name = "adhan"
version = "0.1.0"
description = "Raspberry Pi adhan appliance"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "adhanpy>=1.0.0",
    "APScheduler>=3.10",
    "PyChromecast>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "freezegun>=1.4"]

[project.scripts]
adhan = "adhan.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["adhan"]
omit = ["src/adhan/__main__.py", "src/adhan/players/cast.py", "src/adhan/players/bluetooth.py", "src/adhan/app.py"]

[tool.coverage.report]
fail_under = 95
show_missing = true
